--- a/themes/fortify-hugo/layouts/partials/components/pricing-plan.html
+++ b/themes/fortify-hugo/layouts/partials/components/pricing-plan.html
@@ -123,7 +123,8 @@
             {{ end }}
           </ul>
           {{ if .button.enable }}
-            <a
+          <div>  
+          <a
               class="btn btn-light hover:bg-slate-600 mt-auto"
               href="{{ .button.link | absURL }}"
               >{{ .button.label }}<span class="icon-wrapper"
@@ -150,7 +151,11 @@
                     <path
                       d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"></path></svg></span></span
             ></a>
+            <a class="flex mt-4 ml-2 text-sm opacity-80 hover:opacity-100 items-center" href="{{ .button.link2 | absURL }}">Or get in touch to request a quote</a>
+            </div>
           {{ end }}
+                  
+
         </div>
       </div>
     {{ end }}
