link documentation from feature table

--- a/themes/fortify-hugo/assets/css/base.css
+++ b/themes/fortify-hugo/assets/css/base.css
@@ -131,6 +131,14 @@ blockquote > p {
     text-decoration: underline !important;
     cursor: pointer;
   }
+  
+  .dashed-underline {
+    border-bottom-width: 1px;
+    border-bottom-style: dashed;
+    border-bottom-color: #a0a0a0;
+    text-decoration: none !important;
+    padding-bottom: 2px;
+  }
 
 /* --- ROTATION FOR LEFT BANNER (Original) --- */
 .rotate-left-lg-fix {
