--- a/themes/fortify-hugo/layouts/pro/list.html
+++ b/themes/fortify-hugo/layouts/pro/list.html
@@ -87,19 +87,23 @@
                 </td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Enqueueing & Scheduling Jobs (Fire-and-Forget)</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+               <a class="dashed-underline" href="{{ "documentation/background-methods/enqueueing-jobs/" | relURL }}"> Enqueueing & Scheduling Jobs (Fire-and-Forget)</a>
+              </th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">✅</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Carbon-Aware Job Scheduling</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/background-methods/carbon-aware-jobs/" | relURL }}">Carbon-Aware Job Scheduling</th></a>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">✅</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Real-Time Scheduling & Enqueueing (Instant execution)</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/pro/real-time-scheduling/" | relURL }}">Real-Time Scheduling & Enqueueing (Instant execution)</th></a>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">❌</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
@@ -111,19 +115,22 @@
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">Unlimited</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Automatic Retry Handling (Exponential Back-off)</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/background-methods/dealing-with-exceptions/" | relURL }}">Automatic Retry Handling (Exponential Back-off)</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">✅</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Schedule Missed Recurring Jobs (After Downtime)</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/background-methods/recurring-jobs/#recurring-jobs-missed-during-downtime" | relURL }}">Schedule Missed Recurring Jobs (After Downtime)</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">❌</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Job Time-outs</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/pro/job-timeout/" | relURL }}">Job Time-outs</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">❌</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
@@ -142,49 +149,57 @@
                 </td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Workflow Management (Job Chaining)</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/pro/job-chaining/" | relURL }}">Workflow Management (Job Chaining)</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">❌</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Batch Processing (Atomic Batches)</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/pro/batches/" | relURL }}">Batch Processing (Atomic Batches)</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">❌</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Priority Queues (Up to 5 Levels)</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/pro/priority-queues/" | relURL }}">Priority Queues (Up to 5 Levels)</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">❌</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Dynamic Queues (Fair-Usage Multi-Tenancy)</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/pro/dynamic-queues/" | relURL }}">Dynamic Queues (Fair-Usage Multi-Tenancy)</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">❌</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Rate Limiting</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/pro/rate-limiters/" | relURL }}">Rate Limiting</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">❌</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Mutexes (Resource Locking)</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/pro/mutexes/" | relURL }}">Mutexes (Resource Locking)</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">❌</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Server Tags (Run jobs on specific servers)</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/pro/server-tags/" | relURL }}">Server Tags (Run jobs on specific servers)</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">❌</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Transaction Plugin (Spring, Micronaut, Quarkus)</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/pro/transactions/" | relURL }}">Transaction Plugin (Spring, Micronaut, Quarkus)</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">❌</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
@@ -197,19 +212,22 @@
                 </td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Dashboard Features</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/pro/jobrunr-pro-dashboard/" | relURL }}">Dashboard Features</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">Simple Overview</td>
               <td class="py-4 px-6 bg-primary text-white">Enhanced Search, Filters, Labels, Observability Integration (Micrometer)</td>
               <td class="py-4 px-6 bg-blue-50 text-gray-900">All Pro Business features + Dashboard SSO, GDPR/HIPAA Redaction</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Multi-Cluster Dashboard</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/pro/jobrunr-pro-multi-dashboard/" | relURL }}">Multi-Cluster Dashboard</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">❌</td>
               <td class="py-4 px-6 text-center bg-primary text-white">❌</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">K8s Autoscaling Support</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "guides/advanced/k8s-autoscaling/" | relURL }}">K8s Autoscaling Support</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">❌</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
@@ -222,7 +240,8 @@
                 </td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Dashboard Security (SSO / OpenID Connect)</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/pro/sso-authentication/" | relURL }}">Dashboard Security (SSO / OpenID Connect)</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">❌</td>
               <td class="py-4 px-6 text-center bg-primary text-white">❌</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
@@ -234,7 +253,8 @@
               <td class="py-4 px-6 bg-blue-50 text-gray-900">✅ (Stress-tested, benchmarked, external security auditing)</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Panic Button (Direct notification for critical issues)</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "blog/2023-06-06-jobrunr-pro-panic-button/" | relURL }}">Panic Button (Direct notification for critical issues)</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">❌</td>
               <td class="py-4 px-6 text-center bg-primary text-white">❌</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">1 / Year</td>
@@ -258,7 +278,8 @@
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">Invoice or Credit Card</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Cluster / Installation Limit</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "understanding-your-license/" | relURL }}">Cluster / Installation Limit</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">Single Cluster (Implied)</td>
               <td class="py-4 px-6 text-center bg-primary text-white">One PRD Cluster</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">Unlimited</td>
@@ -335,9 +356,13 @@
   </div>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-const triggers = document.querySelectorAll(
-  'main a[href*="pro"]:not([href*="get-jobrunr-pro"])'
-);    const modal = document.getElementById('trial-modal');
+    const triggers = document.querySelectorAll(
+      'main a[href*="pro"]' +
+      ':not([href*="get-jobrunr-pro"])' +
+      ':not([href*="documentation/pro"])' +
+      ':not([href*="blog"])'
+    );
+    const modal = document.getElementById('trial-modal');
     const backdrop = document.getElementById('modal-backdrop');
 
     if (!modal || !backdrop) return;
