add Ahrefs validation for SEO scan before migration

--- a/themes/fortify-hugo/layouts/partials/essentials/head.html
+++ b/themes/fortify-hugo/layouts/partials/essentials/head.html
@@ -38,6 +38,10 @@
 {{ partialCached "gtm.html" . }}
 
 
+<!-- Ahref site validation-->
+<script src="https://analytics.ahrefs.com/analytics.js" data-key="B+0bH0hEJK5UstJZcuSzHg" async></script>
+
+
 <!-- search index -->
 {{/*  {{ partial "search-index.html" . }}  */}}
 
