--- a/themes/fortify-hugo/layouts/partials/essentials/head.html
+++ b/themes/fortify-hugo/layouts/partials/essentials/head.html
@@ -40,6 +40,7 @@
 
 <!-- Ahref site validation-->
 <script src="https://analytics.ahrefs.com/analytics.js" data-key="B+0bH0hEJK5UstJZcuSzHg" async></script>
+<meta name="ahrefs-site-verification" content="9b87d410f50825bafce602f3a130370072ca49c466b3c817c4bfa40b3eb539c5">
 
 
 <!-- search index -->
