small text changes

--- a/themes/fortify-hugo/assets/css/base.css
+++ b/themes/fortify-hugo/assets/css/base.css
@@ -180,3 +180,7 @@ blockquote > p {
 .kg-image{
   margin-top: 0px !important;
 }
+
+.primary-accordion-content a{
+  text-decoration: underline !important;
+}
