--- a/themes/fortify-hugo/layouts/pro/list.html
+++ b/themes/fortify-hugo/layouts/pro/list.html
@@ -43,7 +43,7 @@
           <p class="mb-2 font-medium text-tertiary">
             {{ .Params.subtitle | markdownify }}
           </p>
-          <h1 class="h2 mb-6">Pricing Plans</h1>
+          <h1 class="h2 mb-6">Pricing plans</h1>
           <p class="text-lg ">
             Find the plan that suits your needs.
           </p>
@@ -61,7 +61,7 @@
     <div class="container">
       <div class="text-center mb-12">
         <h2 class="h2 mb-4 text-gray-900" data-aos="fade-up-sm">
-          Detailed Feature Comparison
+          Detailed feature comparison
         </h2>
         <p class="text-lg text-gray-600 max-w-3xl mx-auto" data-aos="fade-up-sm" data-aos-delay="100">
           Compare the features across JobRunr Open Source, Pro Business, and Pro Enterprise tiers to choose the right fit for your organization.
@@ -136,7 +136,8 @@
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
-              <th scope="row" class="py-4 px-6 font-medium text-gray-900">Thread Support (e.g., Project Loom / Virtual Threads)</th>
+              <th scope="row" class="py-4 px-6 font-medium text-gray-900">
+                <a class="dashed-underline" href="{{ "documentation/configuration/virtual-threads/" | relURL }}">Thread Support (e.g., Project Loom / Virtual Threads)</a></th>
               <td class="py-4 px-6 text-center bg-gray-100 text-gray-900">✅</td>
               <td class="py-4 px-6 text-center bg-primary text-white">✅</td>
               <td class="py-4 px-6 text-center bg-blue-50 text-gray-900">✅</td>
