--- a/themes/fortify-hugo/layouts/partials/components/pricing-plan.html
+++ b/themes/fortify-hugo/layouts/partials/components/pricing-plan.html
@@ -52,7 +52,7 @@
           </ul>
 
           {{ if .button.enable }}
-            <a class="btn-dark btn mt-auto" href="{{ .button.link | absURL }}"
+            <a class="btn-dark btn mt-auto" href="{{ .button.link }}"
               >{{ .button.label | markdownify }}<span class="icon-wrapper"
                 ><span class="icon"
                   ><svg
@@ -126,7 +126,7 @@
           <div>  
           <a
               class="btn btn-light hover:bg-slate-600 mt-auto"
-              href="{{ .button.link | absURL }}"
+              href="{{ .button.link }}"
               >{{ .button.label }}<span class="icon-wrapper"
                 ><span class="icon"
                   ><svg
@@ -151,7 +151,7 @@
                     <path
                       d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"></path></svg></span></span
             ></a>
-            <a class="flex mt-4 ml-2 text-sm opacity-80 hover:opacity-100 items-center" href="{{ .button.link2 | absURL }}">Or get in touch to request a quote</a>
+            <a class="flex mt-4 ml-2 text-sm opacity-80 hover:opacity-100 items-center" href="{{ .button.link2 }}">Or get in touch to request a quote</a>
             </div>
           {{ end }}
                   
@@ -194,7 +194,7 @@
           </ul>
 
           {{ if .button.enable }}
-            <a class="btn mt-auto btn-dark" href="{{ .button.link | absURL }}"
+            <a class="btn mt-auto btn-dark" href="{{ .button.link }}"
               >{{ .button.label | markdownify }}<span class="icon-wrapper"
                 ><span class="icon"
                   ><svg
