Add missing assets and hide "in this section"

--- a/themes/fortify-hugo/layouts/documentation/list.html
+++ b/themes/fortify-hugo/layouts/documentation/list.html
@@ -33,7 +33,7 @@
           </div>
 
           <!-- List pages in this section -->
-          {{ if .RegularPages }}
+          <!-- {{ if .RegularPages }}
           <div class="mt-12">
             <h2 class="mb-6">In This Section</h2>
             <div class="row g-4">
@@ -51,7 +51,7 @@
               {{ end }}
             </div>
           </div>
-          {{ end }}
+          {{ end }} -->
         </article>
       </main>
     </div>
